<resources>
    <string name="app_name">SaveDataFirebase</string>
    <string name="registration">REGISTRATION</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="Successfuly">Successfuly Read</string>
    <string name="firstname">firstName</string>
    <string name="lastname">lastName</string>
    <string name="age1">age</string>
    <string name="exist">User Doesn\'t Exist</string>
    <string name="enterusername">PLease enter the Username</string>
    <string name="users">Users</string>
    <string name="failed">Failed</string>
    <string name="username1">UserName</string>
    <string name="read_data">READ DATA</string>
    <string name="first_name1">FIRST NAME:</string>
    <string name="last_name1">LAST NAME:</string>
    <string name="age3">AGE:</string>
    <string name="retrieve">RETRIEVE</string>
    <string name="username3">UserName</string>
    <string name="first_name3">First Name</string>
    <string name="last_name3">Last Name</string>
    <string name="age4">Age</string>
    <string name="update_data4">Update Data</string>
    <string name="update">UPDATE</string>
    <string name="deletedata">deletedata</string>
    <string name="delete_data">DELETE DATA</string>
    <string name="username5">Username</string>
    <string name="successfulydeleted">Successfuly Deleted</string>
    <string name="uccessfulyupdated">Successfuly Updated</string>
    <string name="failedtoupdate">Failed to Update</string>
    <string name="firstName">firstName</string>
    <string name="lastName">lastName</string>
    <string name="age6">age</string>
</resources>