<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margintop3"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginTop="@dimen/topp"
            android:hint="@string/last_name"
            android:paddingStart="@dimen/start"
            android:paddingLeft="@dimen/left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstName"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginTop="@dimen/topp"
            android:hint="@string/age"
            android:paddingStart="@dimen/start"
            android:paddingLeft="@dimen/left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastName"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_marginTop="@dimen/topp"
            android:hint="@string/username"
            android:paddingStart="@dimen/start"
            android:paddingLeft="@dimen/left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height11"
            android:layout_marginTop="@dimen/margintop"
            android:hint="@string/first_name"
            android:paddingStart="@dimen/start"
            android:paddingLeft="@dimen/left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/registration"
            android:textColor="@color/black"
            android:textSize="@dimen/size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>